# json-arrays-py

./: .bumpversion.cfg  .bumpversion.toml  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .sourcery.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  cliff.toml  codecov.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: benchmarks_base.yml  benchmarks_fork_pr_run.yml  benchmarks_fork_pr_track.yml  benchmarks_pr.yml  benchmarks_pr_closed.yml  build-publish.yml  build.yml  check.yml  ci.yml  codeql-analysis.yml  coverage.yml  dependency-submission.yml  latest-changes.yml  release.yml  rolling.yml  scheduled.yml  test.yml
.grit/patterns/: avoid_pipe_unions.md
benches/: update_doc.py
benchmarks/: test_load_json_file.py  test_roundtrip_json_file.py
examples/: jq_length.py  json_ndjson_converter.py
json_streams/: __init__.py  __init__.pyi  exceptions.py  exceptions.pyi  file.py  files.py  json_iter.py  json_iter.pyi  jsonl_iter.py  jsonl_iter.pyi  jsonlib.py  jsonlib.pyi  types.py  utils.py  utils.pyi
json_streams/backends/: be_json.py  be_json.pyi  be_orjson.py  be_ujson.py  be_ujson.pyi
json_streams/encoders/: __init__.py  decimal_encoders.py
json_streams/utility/: __init__.py  types.py
src/json_arrays/: __init__.py  _types.py  exceptions.py  files.py  json_iter.py  jsonl_iter.py  jsonlib.py
src/json_arrays/backends/: be_json.py
src/json_arrays/encoders/: __init__.py  decimal_encoders.py
src/json_arrays/jsonlib/: __init__.py
src/json_arrays/jsonlib/backends/: __init__.py  be_json.py  be_orjson.py
src/json_arrays/shared/: __init__.py  writer.py
src/json_arrays/utility/: __init__.py
src/json_streams/: __init__.py  files.py  json_iter.py  jsonl_iter.py  jsonlib.py
src/json_streams/backends/: be_json.py
src/json_streams/utility/: __init__.py
tests/: conftest.py  requirements-testing.txt  requirements.txt  test_files.py  test_iter.py  test_json_arrays_api.py  test_json_iter_api.py  test_json_sinks.py  test_json_streams_init.py  test_jsonlib_api.py  test_jt_iter.py  test_utility.py  test_utils.py  utils.py
tests/__snapshots__/: test_json_arrays_api.ambr  test_json_iter_api.ambr  test_jsonlib_api.ambr
tests/__snapshots__/test_json_arrays_api/: test_json_gzip_load_fp.json  test_load_file_name[testsdataobjs.jsonl.gz].json  test_load_from_file[testsdataarray.jsonl].json
tests/data/: array.json  array.json.bz2  array.jsonl  array.jsonl.bz2  array.ndjson  array.ndjson.bz2
tests/integration/: conftest.py  test_json_gzip.py  test_json_streams_gzip.py  test_jsonl_gzip.py  test_streams.py
tests/unit/: test_decimal_encoders.py  test_filenames.py
